--- a/src/components/todo.css
+++ b/src/components/todo.css
@@ -1,6 +1,80 @@
-.badge bg-secondary{
-    position: center;
+@import './todo.css';
+@import url('https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap');
+/* .todoapp{
+    background-image:url("./img/paper.jpg") ;
+
+} */
+h1{
+    font-family: 'New Tegomin', serif;;
+    text-align: center;
+    color: rgb(31, 31, 25);
+ }
+
+ h2{
+     text-align: center;
+ }
+ /*
+.btn btn-outline-primary{
+    padding: 100px;
+}  */
+
+.btn-outline-primary {
+    color: #0d6efd;
+    border-color: #0d6efd;
+    width: 122px;
+    height: 60px;
 }
-.todo{
-    color: blue;
+
+.btn-outline-primary:hover {
+    color: gold;
+
+}
+.str{
+    color: red;
+}
+span{
+    text-align: center;
+    font-size: 25px;
+}
+/* 
+.display-1{
+     background-image:url("./img/bac1.jpg") ;
+     background-repeat: no-repeat; 
+}*/
+.mb-3{
+   width: 600px;
+    display: -webkit-flex;
+    margin-left: auto;
+    margin-right: auto
+}
+
+.form-check{
+    margin-left: auto;
+    margin-right: auto;
+    width: 250px;
+}
+/* .form-check .form-check-input {
+   
+    display: -webkit-flex;
+    margin-left: auto;
+    margin-right: auto;
+} */
+
+.form-check-input{
+    margin-right: 50px;
+}
+.badge {
+   
+    margin-left: 70px;
+    /* margin-right: 50px; */
+    display: inline-block;
+    padding: -0.65em .65em;
+    font-size: .75em;
+    font-weight: 700;
+    line-height: 2;
+    color: #fff;
+    text-align: right;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25rem;
 }
